stretchy intro-img potential fix

--- a/src/app/components/Home/App.css
+++ b/src/app/components/Home/App.css
@@ -50,7 +50,6 @@ color: white !important;
 
 .intro-img {
   width: 100%;
-  height: 100vh;
 }
 
 .img-grid {
@@ -334,7 +333,6 @@ input[type="submit"] {
 @media only screen and (max-width: 600px) {
   .intro-img {
     width: 100%;
-    height: 100%;
 }
   #ListFix {
     margin-top: 10vh;
