--- a/src/app/components/Science/science.css
+++ b/src/app/components/Science/science.css
@@ -218,7 +218,6 @@
     }
     .intro-img-cup {
         width: 100%;
-        height: 110vh;
     }
 }
 
